# learn_github_action

./: CMakeLists.txt  hello_world.cpp
.github/workflows/: main.yml
